# image-encryption

./: .gitignore  README.md  build.sh  docker-compose.yml  pyproject.toml  render.yaml  standalone_demo.html
backend/: benchmark_comprehensive.py  chaotic_crypto.py  create_comparison_visualizations.py  dockerfile  download_benchmark_images.py  image_analysis.py  profile_crypto.py  requirements.txt  server.py  test_bitstream_quality.py  visualize.py
backend/benchmark_results/: benchmark_results.json  latex_table.tex  summary_report.txt
frontend/: README.md  dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
