[tool.poetry]
name = "hyperchaos-crypto-backend"
version = "0.1.0"
description = "Backend for Hyperchaos Crypto Project"
authors = ["abdelrahimabdelazim303@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
flask = "3.0.3"
flask-cors = "4.0.1"
gunicorn = "22.0.0"
numpy = "1.26.4"
scipy = "1.11.4"
pillow = "10.4.0"
matplotlib = "3.8.4"
plotly = "5.24.1"
scikit-image = "0.22.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"